--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
       "no-console": "off",
       "react/display-name": "off",
       "react/react-in-jsx-scope": "off",
+      "react/no-find-dom-node": "off",
       "react/prop-types": "off",
       "comma-dangle": [
         "error",
