--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-plugin-react": "^7.10.0",
     "husky": "^0.14.3",
     "laravel-mix": "^2.1.11",
+    "node-sass": "^6.0.1",
     "stylelint": "^9.3.0",
     "stylelint-config-genero": "git+https://github.com/generoi/stylelint-config-genero.git",
     "wp-pot-cli": "^1.2.1"
